--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,22 +1,18 @@
 // Font.
-$font: (
-  primary: ("Muli",sans-serif)
-);
+$font: (primary: ("Muli", sans-serif));
 
 // Palette.
-$palette: (
-  primary:       #272c30,
-  primary-alt:   lighten(#272c30, 60%),
-  secondary:     lighten(#272c30, 15%),
-  meta:          lighten(#272c30, 45%),
-  border:        #e8e8e8,
-  border-alt:    lighten(#272c30, 7%),
-  accent:        #d8195e,
-  accent-blue:   #0c8aea,
-  accent-green:  #0da5b1,
+$palette: (primary: #272c30,
+  primary-alt: lighten(#272c30, 60%),
+  secondary: lighten(#272c30, 15%),
+  meta: lighten(#272c30, 45%),
+  border: #e8e8e8,
+  border-alt: lighten(#272c30, 7%),
+  accent: #d8195e,
+  accent-blue: #0c8aea,
+  accent-green: #0da5b1,
   accent-violet: #7c43a8,
-  accent-yellow: #ed9700
-);
+  accent-yellow: #ed9700);
 
 @import "imports/functions";
 
@@ -34,3 +30,4 @@ $palette: (
 @import "imports/footer";
 @import "imports/palettes";
 @import "imports/banner";
+@import "imports/netlify_identity";
